@@ -1,5 +1,6 @@
 package me.michael.command;
 
+import java.util.Arrays;
 import java.util.List;
 
 public interface ICommand {
@@ -8,6 +9,6 @@ public interface ICommand {
   String getName();
 
   default List<String> getAliases() {
-    return List.of();
+    return Arrays.asList();
   }
 }
